# Curve

./: README.md
CmakeProject/: CMakeLists.txt  Ellipse.h  Helix.cpp  Helix.h
TestCad/: Circle.cpp  Ellipse.cpp  Source.cpp  TestCad.vcxproj  TestCad.vcxproj.filters  Utility.h
VisualStudioProject/: TestCad.sln
VisualStudioProject/TestCad/: .clang-format  Circle.h  Figure.h  Source.cpp  TestCad.vcxproj  TestCad.vcxproj.filters
